tests/ui/asm/x86_64/x86_64_parse_error.stderr
error: explicit register arguments cannot have names
  --> $DIR/x86_64_parse_error.rs:9:18
   |
LL |         asm!("", a = in("eax") foo);
   |                  ^^^^^^^^^^^^^^^^^

error: positional arguments cannot follow named arguments or explicit register arguments
  --> $DIR/x86_64_parse_error.rs:15:36
   |
LL |         asm!("{1}", in("eax") foo, const bar);
   |                     -------------  ^^^^^^^^^ positional argument
   |                     |
   |                     explicit register argument

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/x86_64_parse_error.rs:11:46
   |
LL |         asm!("{a}", in("eax") foo, a = const bar);
   |                                              ^^^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let mut bar = 0;
LL +     const bar: /* Type */ = 0;
   |

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/x86_64_parse_error.rs:13:46
   |
LL |         asm!("{a}", in("eax") foo, a = const bar);
   |                                              ^^^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let mut bar = 0;
LL +     const bar: /* Type */ = 0;
   |

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/x86_64_parse_error.rs:15:42
   |
LL |         asm!("{1}", in("eax") foo, const bar);
   |                                          ^^^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let mut bar = 0;
LL +     const bar: /* Type */ = 0;
   |

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0435`.
